exports[`withInteractiveStarRatingState should render correctly 1`] = `
<BpkInteractiveStarRating
  className={null}
  getStarLabel={[Function]}
  hoverRating={0}
  id="my-star-rating"
  large={false}
  maxRating={5}
  onMouseLeave={[Function]}
  onRatingHover={[Function]}
  onRatingSelect={[Function]}
  rating={0} />
`;

exports[`withInteractiveStarRatingState should render correctly with "large" attribute 1`] = `
<BpkInteractiveStarRating
  className={null}
  getStarLabel={[Function]}
  hoverRating={0}
  id="my-star-rating"
  large={true}
  maxRating={5}
  onMouseLeave={[Function]}
  onRatingHover={[Function]}
  onRatingSelect={[Function]}
  rating={0} />
`;
